<resources>
    <string name="app_name">HomeWork</string>

    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="login_title">Tentcoo</string>
    <string name="login_subTitle">tools</string>
    <string name="login_signUp_btn">New User? SIGNUP</string>
    <string name="login_btn">LET\'S GO</string>
    <string name="signup_login">Already Account? LOGIN</string>
    <string name="signup_btn">SIGNUP</string>
    <string name="login_or">OR</string>
</resources>
