<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        layout="@layout/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/signup_edt"
        android:layout_marginBottom="50dp" />

    <RelativeLayout
        android:id="@+id/signup_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <RelativeLayout
            android:id="@+id/sign_name_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/sign_name_edt"
                style="@style/LoginEditTextStyle"
                android:hint="@string/name"
                android:inputType="text" />

            <ImageView
                style="@style/LoginImageViewStyle"
                android:src="@drawable/user" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sign_mobile_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/sign_name_rl"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/sign_mobile_edt"
                style="@style/LoginEditTextStyle"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="11" />

            <ImageView
                style="@style/LoginImageViewStyle"
                android:src="@drawable/mobile" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sign_user_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/sign_mobile_rl"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/sign_user_edt"
                style="@style/LoginEditTextStyle"
                android:hint="@string/userName"
                android:inputType="number" />

            <ImageView
                style="@style/LoginImageViewStyle"
                android:src="@drawable/user" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sign_psw_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/sign_user_rl"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/sign_psw_edt"
                style="@style/LoginEditTextStyle"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageView
                style="@style/LoginImageViewStyle"
                android:src="@drawable/password" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signup_btn"
        android:layout_below="@+id/signup_edt"
        android:gravity="center">

        <TextView
            android:id="@+id/signup_login_tv"
            style="@style/TextButtonStyle"
            android:text="@string/signup_login" />
    </LinearLayout>


    <Button
        android:id="@+id/signup_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/login_login_btn_selector"
        android:text="@string/signup_btn"
        android:textColor="@android:color/white" />

</RelativeLayout>