<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timg"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        layout="@layout/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_edt_ll"
        android:layout_marginBottom="100dp" />

    <LinearLayout
        android:id="@+id/login_edt_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/login_user_edt"
                style="@style/LoginEditTextStyle"
                android:hint="@string/userName"
                android:inputType="number" />

            <ImageView
                style="@style/LoginImageViewStyle"
                android:src="@drawable/user" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/login_psw_edt"
                style="@style/LoginEditTextStyle"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageView
                style="@style/LoginImageViewStyle"
                android:src="@drawable/password" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_btn"
        android:layout_below="@id/login_edt_ll"
        android:gravity="center">

        <TextView
            android:id="@+id/login_signUp_tv"
            style="@style/TextButtonStyle"
            android:text="@string/login_signUp_btn" />
    </LinearLayout>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_view"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_login_btn_selector"
        android:text="@string/login_btn"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_sharp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/login_or"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_sharp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/facebook" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/twitter" />
    </LinearLayout>
</RelativeLayout>